--- a/app/webroot/calendar/index.html
+++ b/app/webroot/calendar/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>A lo Fresa</title>
 
 	<meta name="description" content="Full view calendar component for twitter bootstrap with year, month, week, day views.">
