--- a/app/webroot/calendar/index.html
+++ b/app/webroot/calendar/index.html
@@ -31,15 +31,15 @@
 
 		<div class="pull-right form-inline">
 			<div class="btn-group">
-				<a class="btn btn-success" href="../../../">Regresar</a>
-				<button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
-				<button class="btn" data-calendar-nav="today">Today</button>
-				<button class="btn btn-primary" data-calendar-nav="next">Next >></button>
+				<a class="btn btn-success" href="../../../">Regresar a página principal</a></br></br>
+				<button class="btn btn-primary" data-calendar-nav="prev"><< Anterior</button>
+				<button class="btn" data-calendar-nav="today">Hoy</button>
+				<button class="btn btn-primary" data-calendar-nav="next">Siguiente >></button>
 				
 			</div>
-			
+		</br></br>	
 		</div>
-
+		
 		<h3></h3>
 		<div class="btn-group">
 			<span class="btn btn-warning active">Berman</span>
@@ -149,11 +149,11 @@
 		
 	</script>
 	<script>
-		setTimeout(() => {
+		/*setTimeout(() => {
 			location.reload();
 		
 	 }, "30000");
-		 
+		 */
 	   
 		 </script>
 </div>
