--- a/app/webroot/calendar/tmpls/day.html
+++ b/app/webroot/calendar/tmpls/day.html
@@ -45,15 +45,19 @@
 				</div>
 			<% }; %>
 		</div>
-		
+		<% cantidadEventos = 0
+			left = 0; %>
 		<% _.each(by_hour, function(event){ %>
-			<div class="pull-left day-event day-highlight dh-<%= event['class'] %>" style="margin-top: <%= (event.top * 30) %>px; height: <%= (event.lines * 30) %>px">
+			<% if(cantidadEventos > 3){ left = -170;   }else{ left = left + 10; } %>
+			<div class="pull-left day-event day-highlight dh-<%= event['class'] %>" style="left:<%=left %>px; margin-top: <%= (event.top * 30) %>px; height: <%= (event.lines * 30) %>px">
 				<span class="cal-hours"><%= event.start_hour %> - <%= event.end_hour %></span>
 				<a href="<%= event.url ? event.url : 'javascript:void(0)' %>" data-event-id="<%= event.id %>"
 				   data-event-class="<%= event['class'] %>" class="event-item">
 					<%= event.title %></a>
 			</div>
-		<% }); %>
+		<%
+		cantidadEventos = cantidadEventos +1
+		 }); %>
 	</div>
 	<% if(after_time.length) {%>
 	<div class="row-fluid clearfix cal-day-hour">
